--- a/scss/partials/_hero.scss
+++ b/scss/partials/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
   width: 100%;
   height: fit-content;
-  background-image: url("/assets/Poster.png");
+  background-image: url("../assets/Poster.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
